--- a/public/index.html
+++ b/public/index.html
@@ -1,169 +1,205 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
-<link href="css/cobox.css" rel="stylesheet" type="text/css">
-<link href="css/portfolio.css" rel="stylesheet" type="text/css" media="all">
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all">
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
+    <link href="css/cobox.css" rel="stylesheet" type="text/css">
+    <link href="css/portfolio.css" rel="stylesheet" type="text/css" media="all">
+    <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
     <link href='//fonts.googleapis.com/css?family=Quicksand:400,700,300' rel='stylesheet' type='text/css'>
-<link href='//fonts.googleapis.com/css?family=Cinzel:400,700,900' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link href='//fonts.googleapis.com/css?family=Cinzel:400,700,900' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css"
+          href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
 
     <script src="js/modernizr.custom.js"></script>
 
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 <div class="navbar-wrapper">
-<div class="container">
+    <div class="container">
 
-<nav class="navbar navbar-inverse navbar-static-top">
-<div class="container">
-<div class="navbar-header">
-<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-    <span class="sr-only">Toggle navigation</span>
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span>
-</button>
-</div>
-<div id="navbar" class="navbar-collapse collapse navbar-right">
-<ul class="nav navbar-nav link-effect">
-    <li class="active"><a href="#">Home</a></li>
-    <li><a href="#about">About</a></li>
-    <li><a href="#portfolio">Projects</a></li>
-    <li><a href="/assignment/#!/">Assignments</a> </li>
-    <li><a href="#contact">Contact</a></li>
-</ul>
-</div>
-</div>
-</nav>
-</div>
+        <nav class="navbar navbar-inverse navbar-static-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                            aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                </div>
+                <div id="navbar" class="navbar-collapse collapse navbar-right">
+                    <ul class="nav navbar-nav link-effect">
+                        <li class="active"><a href="#">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#portfolio">Projects</a></li>
+                        <li><a href="#experience">Experience</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
 </div>
 
 <div class="banner">
-<ul class="rslides" id="slider">
-<li>
-<div class="banner-info">
-<h3>VAIBHAV KARNAM</h3>
-<span class="line1"></span>
-<p>Welcome to my page</p>
-<span class="line2"></span>
-<a href="https://www.facebook.com/vaibhav.karnam"><span class="facebook"></span></a></div>
-</li>
+    <ul class="rslides" id="slider">
+        <li>
+            <div class="banner-info">
+                <h3>VAIBHAV KARNAM</h3>
+                <span class="line1"></span>
+                <p>Welcome to my page</p>
+                <span class="line2"></span>
+                <h3> <a href="https://www.linkedin.com/in/vaibhav-karnam-99baa5143/"><span class="fa fa-linkedin"></span></a></h3></div>
+        </li>
 
-<li>
-<div class="banner-info">
-<h3>Web Developer</h3>
-<span class="line1"></span>
-<p>Pusrsuing Masters in</p>
-<span class="line2"></span>
-<div class="social-icons">
-<a href="https://www.facebook.com/vaibhav.karnam"><span class="facebook"></span></a>
-</div>
-</div></li>
+        <li>
+            <div class="banner-info">
+                <h3>Software Engineer</h3>
+                <span class="line1"></span>
+                <p>Full-Stack Developer</p>
+                <span class="line2"></span>
+                <h3><a href="https://github.com/vaibhavkarnam"><span class="fa fa-github"></span></a></h3>
+            </div>
+        </li>
 
-<li>
-<div class="banner-info">
-<h3>VAIBHAV KARNAM</h3>
-<span class="line1"></span>
-<p>Computer Science</p>
-<span class="line2"></span>
-<a href="https://www.facebook.com/vaibhav.karnam"><span class="facebook"></span></a>
-</div></li>
-
-<li>
-<div class="banner-info">
-<h3>Web Developer</h3>
-<span class="line1"></span>
-<p>Northeastern University</p>
-<span class="line2"></span>
-<div class="social-icons">
-<a href="https://www.facebook.com/vaibhav.karnam"><span class="facebook"></span>
-</a>
+        <li>
+            <div class="banner-info">
+                <h3>Northeastern Univ</h3>
+                <span class="line1"></span>
+                <p>M.S in Computer Science</p>
+                <span class="line2"></span>
+                <h3><a href="https://www.linkedin.com/in/vaibhav-karnam-99baa5143"><span class="fa fa-linkedin"></span></a></h3>
+            </div>
+        </li>
+    </ul>
 </div>
-</div>
-</li>
-</ul></div>
 
 <div class="about-me" id="about">
-<h3 class="text-center slideanim">About Me</h3>
+    <h3 class="text-center slideanim">About Me</h3>
 
-<div class="container">
-<div class="row">
-<div id="homepage"class="col-md-4 col-xs-12">
-<div class="mydetails slideanim text-center">
-<img class="img-circle img-responsive" src="images/man.jpg" alt="Generic placeholder image" width="200" height="200">
-<h3>Vaibhav Karnam</h3>
-<p>Prospective Web Developer</p>
-<p><a href="https://github.com/vaibhavkarnam/karnam-vaibhav-webdev1" id ="github" class="fa fa-github">Github</a></p>
-<p class="skill-text text-center">Graduate student pursuing computer science at Northeastern University. Previously worked as a software engineer for Robert Bosch, India.</p>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div class="myportfolio" id="portfolio">
-<h3 class="text-center slideanim">My Portfolio</h3>
-<p class="text-center slideanim">My Recent Projects , Just "Click" on them to know More.</p>
-<section class="vertical" id="grid3d">
-<div class="grid-wrap">
-<div class="grid">
-<figure><a href="/project/#!/"><img class="slideanim" src="images/1.jpg" alt="img01"/></a>
-<a href="/project/#!/"><h3>CINEREVIEW</h3></a>
-</figure>
-</div>
-</div><!-- /grid-wrap -->
-</section>
-</div>
-<div class="contact-me" id="contact">
-<h3 class="text-center slideanim">Contact Me</h3>
-<p class="text-center slideanim">Please feel free to contact me. My contact details are given below</p>
-<div class="container">
-<footer>
-<div class="row">
-<div class="col-md-6 slideanim">
-<div class="contact-info">
-    <h4>Contact Info</h4>
-    <div class="footer-info">
-        <div>
-            <i class="glyphicon glyphicon-globe"></i>
-            <p class="p1">198 Hillside Street</p>
-            <p class="p2">Boston, MA 02120</p></div>
-        <div>
-            <i class="glyphicon glyphicon-phone-alt"></i>
-            <p class="p1">+1 857 308 7026</p></div>
-        <div>
-            <i class="glyphicon glyphicon-envelope"></i>
-            <p class="p1"><a href="mailto:myemail@something.com">karnam.v@husky.neu.edu</a></p>
-            <p class="p2"><a href="mailto:myemail@nothing.com">karnamvaibhav360@gmail.com</a></p>
+    <div class="container">
+        <div class="row">
+            <div id="homepage" class="col-md-12 col-xs-12">
+                <div class="mydetails slideanim text-center">
+                    <p><a href="https://github.com/vaibhavkarnam/karnam-vaibhav-webdev1" id="github"
+                          class="fa fa-github-square">Github</a></p>
+                    <p><a href="https://www.linkedin.com/in/vaibhav-karnam-99baa5143/" id="linkedIn"
+                          class="fa fa-linkedin-square">LinkedIn</a></p>
+                    <p class="skill-text text-center">Passionate software Engineer looking for for full-time opportunities in software development starting May 2019. My areas of interest are Java, Full-Stack and Web Development, Database Management along with Hadoop development using MapReduce or Spark.
+                    </p>
+                    <p> Skills : Java, C#, SQL, MEAN Stack, JPA, JSP, Spring, AWS</p>
+                </div>
+            </div>
         </div>
     </div>
 </div>
+<div class="myportfolio" id="experience">
+    <h3 class="text-center slideanim">Expirience</h3>
+    <p class="text-center slideanim">Click to explore more on linkedIn</p>
+    <section class="vertical" id="grid3dd">
+        <div class="grid-wrap">
+            <div class="grid">
+                <figure id="screen1"><a href="https://www.linkedin.com/in/vaibhav-karnam-99baa5143/"><img class="slideanim" src="images/sc1.png" alt="img01"/></a>
+                </figure>
+            </div>
+        </div>
+        <div class="grid-wrap">
+            <div class="grid">
+                <figure id="screen">
+               <a href="https://www.linkedin.com/in/vaibhav-karnam-99baa5143/"><img class="slideanim" src="images/sc2.png" alt="img01"/></a>
+                </figure>
+            </div>
+        </div>
+        <div class="grid-wrap">
+            <div class="grid">
+                <figure id="screen3"><a href="https://www.linkedin.com/in/vaibhav-karnam-99baa5143/"><img class="slideanim" src="images/sc3.png" alt="img01"/></a>
+                </figure>
+            </div>
+        </div>
+        <div class="grid-wrap">
+            <div class="grid">
+                <figure id="screen4"><a href="https://www.linkedin.com/in/vaibhav-karnam-99baa5143/"><img class="slideanim" src="images/sc4.png" alt="img01"/></a>
+                </figure>
+            </div>
+        </div><!-- /grid-wrap -->
+    </section>
 </div>
+<div class="myportfolio" id="portfolio">
+    <h3 class="text-center slideanim">My Portfolio</h3>
+    <p class="text-center slideanim">"Click" to open application</p>
+    <p class="text-center slideanim">"Click" on youtube for the demo</p>
+    <section class="vertical" id="grid3d">
+        <div class="grid-wrap">
+            <div class="grid">
+                    <a href=""><h3>Slick Communications</h3></a>
+                <h3><a class = "fa fa-youtube-play" href="https://www.youtube.com/watch?v=7ggchu_sO2Q&feature=youtu.be"></a></h3>
+            </div>
+        </div>
+        <div class="grid-wrap">
+            <div class="grid">
+                    <a href="https://shoppersite.herokuapp.com/DBproject/index.html#!/"><h3>Shopper</h3></a>
+                <h3><a class = "fa fa-youtube-play" href="https://www.youtube.com/watch?v=BblyI_gm2d0"></a></h3>
+
+            </div>
+        </div>
+        <div class="grid-wrap">
+            <div class="grid">
+                    <a href="https://karnam-vaibhav-webdev1.herokuapp.com/project/#!/"><h3>CINEREVIEW</h3></a>
+            </div>
+        </div><!-- /grid-wrap -->
+    </section>
 </div>
-<hr>
-<div class="copyright">
-<p class="text-center">© 2016 My Profile. All Rights Reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
-</div>
-<a href="#myPage" title="To Top"><span class="glyphicon glyphicon-chevron-up"></span></a>
-</footer>
-</div>
+<div class="contact-me" id="contact">
+    <h3 class="text-center slideanim">Contact Me</h3>
+    <div class="container">
+        <footer>
+            <div class="row">
+                <div class="col-md-6 slideanim">
+                    <div class="contact-info">
+                        <h4>Contact Info</h4>
+                        <div class="footer-info">
+                            <div>
+                                <i class="glyphicon glyphicon-globe"></i>
+                                <p class="p1">216 Hemenway St</p>
+                                <p class="p2">Boston, MA 02115</p></div>
+                            <div>
+                                <i class="glyphicon glyphicon-phone-alt"></i>
+                                <p class="p1">Mobile</p>
+                                <p class="p2">+1 857 308 7026</p></div>
+                            <div>
+                                <i class="glyphicon glyphicon-envelope"></i>
+                                <p class="p1"><a href="mailto:myemail@something.com">karnam.v@husky.neu.edu</a></p>
+                                <p class="p2"><a href="mailto:myemail@nothing.com">vaibhav.karnam@gmail.com</a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="copyright">
+                <p class="text-center">© 2016 My Profile. All Rights Reserved | Design by <a
+                        href="http://w3layouts.com">W3layouts</a></p>
+            </div>
+            <a href="#myPage" title="To Top"><span class="glyphicon glyphicon-chevron-up"></span></a>
+        </footer>
+    </div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <!-- js files for banner slider -->
 <script src="js/responsiveslides.min.js"></script>
 <script>
-$(window).load(function() {
+    $(window).load(function () {
 // Slideshow for banner
-$("#slider").responsiveSlides({
-maxwidth: 1920,
-speed: 1000
-});
-});
+        $("#slider").responsiveSlides({
+            maxwidth: 1920,
+            speed: 1000
+        });
+    });
 </script>
 <!-- /js files for banner slider -->
 <!-- js files for portfolio -->
@@ -171,7 +207,7 @@ speed: 1000
 <script src="js/helper.js"></script>
 <script src="js/grid3d.js"></script>
 <script>
-new grid3D( document.getElementById( 'grid3d' ) );
+    new grid3D(document.getElementById('grid3d'));
 </script>
 <!-- /js files for portfolio -->
 <!-- js files for gallery -->
@@ -180,35 +216,35 @@ new grid3D( document.getElementById( 'grid3d' ) );
 <!-- js for smooth scrolling -->
 
 <script>
-$(document).ready(function(){
+    $(document).ready(function () {
 // Add smooth scrolling to all links in navbar + footer link
-$(".navbar a, footer a[href='#myPage']").on('click', function(event) {
+        $(".navbar a, footer a[href='#myPage']").on('click', function (event) {
 // Store hash
-var hash = this.hash;
+            var hash = this.hash;
 // Using jQuery's animate() method to add smooth page scroll
 // The optional number (900) specifies the number of milliseconds it takes to scroll to the specified area
-$('html, body').animate({
-scrollTop: $(hash).offset().top
-}, 900, function(){
+            $('html, body').animate({
+                scrollTop: $(hash).offset().top
+            }, 900, function () {
 // Add hash (#) to URL when done scrolling (default click behavior)
-window.location.hash = hash;
-});
-});
-})
+                window.location.hash = hash;
+            });
+        });
+    })
 </script>
 <!-- /js for smooth scrolling -->
 <!-- js for sliding -->
 
 <script>
-$(window).scroll(function() {
-$(".slideanim").each(function(){
-var pos = $(this).offset().top;
-var winTop = $(window).scrollTop();
-if (pos < winTop + 600) {
-$(this).addClass("slide");
-}
-});
-});
+    $(window).scroll(function () {
+        $(".slideanim").each(function () {
+            var pos = $(this).offset().top;
+            var winTop = $(window).scrollTop();
+            if (pos < winTop + 600) {
+                $(this).addClass("slide");
+            }
+        });
+    });
 </script>
 <!-- /js for sliding -->
 <!-- /js files -->
